--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-first
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@200;400;600&display=swap"
+    />
+  </head>
+  <body>
+    <header>
+      <a href="https://github.com/emorgun45"><img src="materials/github.svg" alt="github logo"></a>
+      <h1>This site is developing</h1>
+      <p>I am a student so I don't have time so much</p>
+    </header>
+  </body>
+</html>
